# whatsapp-multisservice

./: .dockerignore  .gitignore  Dockerfile  Makefile  Procfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  settings.toml
src/: config.py
src/api/: bot.py  messages.py  routes.py
src/app/: app.py
src/database/: __init__.py
src/models/: user.py
